fix: don't hide the dark mode checkbox
fixes: #2

--- a/src/assets/styles/components/dark-mode.module.scss
+++ b/src/assets/styles/components/dark-mode.module.scss
@@ -36,8 +36,9 @@
 
   &__checkbox {
     position: absolute;
-    opacity: 0;
     z-index: -1;
+    height: 0;
+    width: 0;
   }
 
   &__icon {
